[metadata]
name = suggestion
version = file: VERSION
url = https://github.com/pyrustic/suggestion
author = Pyrustic Evangelist
author_email = rusticalex@yahoo.com
maintainer = Pyrustic Evangelist
maintainer_email = rusticalex@yahoo.com
description = Democratizing auto-complete(suggest) for Python desktop applications
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
keywords =
    auto-complete
    auto-suggest
    gui
    desktop-app
    autocomplete
    frontend
    tkinter
    app
    lightweight
    pyrustic
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.5
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    viewable

[options.entry_points]
console_scripts =
    suggestion = suggestion.__main__:main
